# calibration-cebr3

./: .root  CMakeLists.txt  Map3D_viewer.cpp  README.md  c.root  main.cpp  mainR.cpp  mainR.cpp~
functions/: functions.h  functions.h~  functionsR.h~  functions_main.h
lib/FileReader/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  FileReader.pro  README.md  filereader.cpp  filereader.h  package_info  supprTest.patch
lib/FileReader/Doc/: Doxyfile
lib/FileReader/debian/: changelog  control  rules
lib/FileReader/docker/: Dockerfile
lib/FileReader/lib/CommonQuadratorHeader/: CMakeLists.txt  package_info
lib/FileReader/lib/CommonQuadratorHeader/500/: kristal.h  quadratorcfg.h  quadratorcts.h  quadratorevt.c  quadratorevt.h
lib/FileReader/lib/CommonQuadratorHeader/510/: kristal.h  misc.h  quadratorcfg.h  quadratorcorestate.h  quadratorcts.h  quadratorevt.h  quadratorstatus.h  russianquadratorevt.h  tcpprotocol.h
lib/FileReader/lib/CommonQuadratorHeader/debian/: changelog  control
lib/FileReader/tests/: CMakeLists.txt  FileReaderTests.pro  tst_filereader.cpp  tst_filereader.hpp
lib/FileReader/tests/testFiles/: corrupted.cqua  corrupted.csv  corrupted.json  corrupted_champs.json  corrupted_complete.json  corrupted_header_missing.csv  test.cql  test.cqua  test.csv  test.json  test.lql  test.lqua
uild/: CMakeCache.txt  Makefile  cmake_install.cmake
uild/lib/FileReader/: Makefile
